<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GoFigure">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/goFigureTitle"
            android:textColor="#424242"
            android:textSize="35sp"
            android:textStyle="italic" />

        <HorizontalScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="10dp">

                <EditText
                    android:id="@+id/box1"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/input_box"
                    android:gravity="center"
                    android:inputType="number"
                    android:text="@string/blank" />

                <TextView
                    android:id="@+id/operator1"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/operator_box"
                    android:gravity="center"
                    android:text="@string/blank"
                    android:textColor="#000000"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/box2"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/input_box"
                    android:gravity="center"
                    android:inputType="number"
                    android:text="@string/blank" />

                <TextView
                    android:id="@+id/operator2"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/operator_box"
                    android:gravity="center"
                    android:text="@string/blank"
                    android:textColor="#000000"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/box3"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/input_box"
                    android:gravity="center"
                    android:inputType="number"
                    android:text="@string/blank" />

                <TextView
                    android:id="@+id/operator3"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/operator_box"
                    android:gravity="center"
                    android:text="@string/blank"
                    android:textColor="#000000"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/box4"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/input_box"
                    android:gravity="center"
                    android:inputType="number"
                    android:text="@string/blank" />

                <TextView
                    android:id="@+id/operator4"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_margin="10dp"
                    android:gravity="center"
                    android:text="@string/equal"
                    android:textColor="#000000" />

                <EditText
                    android:id="@+id/box5"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/input_box"
                    android:gravity="center"
                    android:inputType="number"
                    android:text="@string/blank" />

            </LinearLayout>

        </HorizontalScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/solveButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/button_box"
                android:onClick="onSolveClick"
                android:text="@string/solve"
                android:textColor="#757575"
                android:textStyle="italic|bold" />

            <Button
                android:id="@+id/clearButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/button_box"
                android:onClick="onClearClick"
                android:text="@string/clear"
                android:textColor="#757575"
                android:textStyle="italic|bold" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>